// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoadingComponent /> should adopt the "error" prop 1`] = `
<Wrapper__Wrapper>
  <H2__H2>
    <FormattedMessage
      defaultMessage="Terribly sorry, but the page cannot be loaded at this time"
      id="portfolio.components.LoadingComponent.error"
      values={Object {}}
    />
  </H2__H2>
  <Scale
    color="red"
    size="100px"
  />
</Wrapper__Wrapper>
`;

exports[`<LoadingComponent /> should adopt the "pastDelay" prop 1`] = `
<Wrapper__Wrapper>
  <H2__H2
    aria-hidden={false}
    hidden={true}
  >
    <FormattedMessage
      defaultMessage="The page is loading..."
      id="portfolio.components.LoadingComponent.pastDelay"
      values={Object {}}
    />
  </H2__H2>
  <CubeGrid
    color="#BADA55"
    size="100px"
  />
</Wrapper__Wrapper>
`;

exports[`<LoadingComponent /> should adopt the "timedOut" prop 1`] = `
<Wrapper__Wrapper>
  <H2__H2>
    <FormattedMessage
      defaultMessage="The page is taking longer to load than expected"
      id="portfolio.components.LoadingComponent.timedOut"
      values={Object {}}
    />
  </H2__H2>
  <CubeGrid
    color="red"
    size="100px"
  />
</Wrapper__Wrapper>
`;

exports[`<LoadingComponent /> should render and match the snapshot 1`] = `""`;
